# codex-project

./: .gitignore  AGENTS.md  README.md  SPEC.md  blockchain.db  blockchain.py  browser-test-recording.webm  pyproject.toml  streamlit_app.py
document_verification/: __init__.py  api.py  core.py  storage.py
tests/: test_document_persistence.py  test_document_verification.py
