[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "document-verification-blockchain"
version = "0.1.0"
description = "Educational Flask and Streamlit document verification blockchain app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==2.2.5",
    "requests==2.31.0",
    "streamlit==1.41.1",
    "werkzeug==2.2.3",
]

[dependency-groups]
dev = [
    "pytest==7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
